# backend-message

./: .env  docker-compose.yml
antivirus-worker/: requirements.txt  worker.py
blacklist-service/: main.py
bot-service/: requirements.txt
bot-service/app/: config.py  database.py  main.py  redis_client.py  redis_listener.py
bot-service/app/api/: endpoints.py
bot-service/app/models/: db_models.py  schemas.py
bot-service/app/services/: bot_service.py  webhook_delivery.py
cpp/crypto-core/: CMakeLists.txt
cpp/crypto-core/include/: nexus_crypto.h
cpp/crypto-core/src/: nexus_crypto.cpp
cpp/yara-scanner/: CMakeLists.txt  scanner.cpp  scanner.h
init-db/: 01-init.sql
log-aggregator/: anonymizer.py  consumer.py  requirements.txt
nexus-api/: Dockerfile  requirements.txt
nexus-api/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
nexus-api/app/api/: auth.py  calls.py  chats.py  contacts.py  files.py  invites.py  messages.py  prekeys.py  reactions.py  stickers.py  users.py  ws.py
nexus-api/app/services/: antivirus_client.py  blacklist_client.py  crypto.py  kafka_logger.py  minio_client.py  totp_client.py
nexus-api/app/workers/: delete_expired_messages.py
nginx/: default.conf
push-notifier/: Dockerfile  requirements.txt
push-notifier/app/: config.py  redis_client.py  worker.py
totp-service/: adaptive_limiter.py  main.py  recovery_codes.py  requirements.txt
